[gd_scene load_steps=16 format=3 uid="uid://iqvuhgs6fnod"]

[ext_resource type="Script" path="res://ui_elements/player_status_bar.gd" id="1_4teh5"]
[ext_resource type="Texture2D" uid="uid://bcot7526lqgqq" path="res://Sprites/SpritesUI/HealthbarCoffee.png" id="2_jrnho"]
[ext_resource type="Texture2D" uid="uid://cjewsh55n30t3" path="res://Sprites/SpritesUI/Healthbar.png" id="2_knjbu"]
[ext_resource type="Texture2D" uid="uid://d1jm8usb8qfg8" path="res://Sprites/SpritesUI/HealthBarProgress.png" id="3_00o8p"]
[ext_resource type="Script" path="res://ui_elements/health_bar.gd" id="4_6puap"]
[ext_resource type="Texture2D" uid="uid://cdhpuwrwv6e0i" path="res://Sprites/SpritesUI/FutureHealthBarProgress.png" id="5_bc4ca"]
[ext_resource type="Texture2D" uid="uid://8tx6tdmsv8j0" path="res://Sprites/SpritesUI/StaminaBarCharged.png" id="5_cgqxw"]
[ext_resource type="Script" path="res://ui_elements/stamina_bar.gd" id="6_i7ust"]
[ext_resource type="Texture2D" uid="uid://upu3jtsni60s" path="res://Sprites/SpritesUI/Coin.png" id="7_4t2ap"]
[ext_resource type="Texture2D" uid="uid://r6v4g81n208l" path="res://Sprites/SpritesUI/Feather.png" id="8_y0ndi"]
[ext_resource type="Texture2D" uid="uid://d38gjhpxxeovt" path="res://Sprites/SpritesUI/Quartz.png" id="9_28dtx"]
[ext_resource type="Texture2D" uid="uid://bq1037wl5y2tx" path="res://Sprites/SpritesUI/StaminaBarBlocker.png" id="9_o3axi"]

[sub_resource type="Animation" id="Animation_po5fb"]
resource_name = "HealthDepleted"
length = 2.0
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthbarCoffee:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthbarCoffee:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HealthbarCoffee:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 176)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthbarCoffee:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HealthBar")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"send_game_over_signal"
}]
}

[sub_resource type="Animation" id="Animation_50kxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthbarCoffee:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthbarCoffee:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HealthbarCoffee:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 176)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthbarCoffee:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bq6bu"]
_data = {
"HealthDepleted": SubResource("Animation_po5fb"),
"RESET": SubResource("Animation_50kxg")
}

[node name="PlayerStatusBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4teh5")

[node name="HealthbarCoffee" type="Sprite2D" parent="."]
position = Vector2(13, 176)
texture = ExtResource("2_jrnho")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bq6bu")
}

[node name="HealthBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0296875
anchor_top = -0.0194444
anchor_right = -0.0296875
anchor_bottom = -0.0194444
offset_right = 208.0
offset_bottom = 63.0001
max_value = 50.0
value = 3.0
texture_progress = ExtResource("3_00o8p")
texture_progress_offset = Vector2(65, 29)
script = ExtResource("4_6puap")
metadata/_edit_use_anchors_ = true

[node name="SecondaryHealthBar" type="TextureProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_top = -0.00018941
anchor_bottom = -0.00018941
offset_top = 0.0119171
offset_right = 208.0
offset_bottom = 63.0119
max_value = 50.0
texture_under = ExtResource("2_knjbu")
texture_progress = ExtResource("5_bc4ca")
texture_progress_offset = Vector2(65, 29)
metadata/_edit_use_anchors_ = true

[node name="HealthText" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.308
anchor_top = 0.143
anchor_right = 0.308
anchor_bottom = 0.143
offset_left = -0.0640793
offset_top = -0.00903988
offset_right = 55.9359
offset_bottom = 22.991
text = "Health:"
metadata/_edit_use_anchors_ = true

[node name="HealthAmount" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.687
anchor_top = 0.143
anchor_right = 0.687
anchor_bottom = 0.143
offset_left = 0.103989
offset_top = -0.00901604
offset_right = 40.104
offset_bottom = 22.991
text = "50/50"
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071875
anchor_top = 0.0916667
anchor_right = 0.071875
anchor_bottom = 0.0916667
offset_right = 142.0
offset_bottom = 3.0
step = 0.1
value = 100.0
texture_progress = ExtResource("5_cgqxw")
script = ExtResource("6_i7ust")
metadata/_edit_use_anchors_ = true

[node name="StaminaBarBlocker" type="TextureRect" parent="StaminaBar"]
visible = false
layout_mode = 0
offset_right = 142.0
offset_bottom = 3.0
texture = ExtResource("9_o3axi")
stretch_mode = 2

[node name="Coin" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0700625
anchor_top = 0.105778
anchor_right = 0.0950625
anchor_bottom = 0.150222
offset_left = 0.16
offset_top = -0.0800018
offset_right = 0.16
offset_bottom = -0.0800018
texture = ExtResource("7_4t2ap")
metadata/_edit_use_anchors_ = true

[node name="Feather" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1455
anchor_top = 0.105778
anchor_right = 0.1705
anchor_bottom = 0.150222
offset_left = -0.120003
offset_top = -0.0800018
offset_right = -0.120003
offset_bottom = -0.0800018
texture = ExtResource("8_y0ndi")
metadata/_edit_use_anchors_ = true

[node name="Quartz" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2215
anchor_top = 0.105778
anchor_right = 0.2465
anchor_bottom = 0.150222
offset_left = 0.23999
offset_top = -0.0800018
offset_right = 0.23999
offset_bottom = -0.0800018
texture = ExtResource("9_28dtx")
metadata/_edit_use_anchors_ = true

[node name="CoinAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.096875
anchor_top = 0.0944444
anchor_right = 0.096875
anchor_bottom = 0.0945555
offset_right = 28.0
offset_bottom = 22.96
text = "0"
metadata/_edit_use_anchors_ = true

[node name="FeatherAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171875
anchor_top = 0.0944444
anchor_right = 0.171875
anchor_bottom = 0.0944444
offset_right = 28.0
offset_bottom = 23.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="QuartzAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.246375
anchor_top = 0.0948889
anchor_right = 0.247
anchor_bottom = 0.0948889
offset_left = 0.32
offset_top = -0.159999
offset_right = 27.92
offset_bottom = 22.84
text = "0"
metadata/_edit_use_anchors_ = true
